--- a/src/data/structs/h1/tags/object.yml
+++ b/src/data/structs/h1/tags/object.yml
@@ -283,27 +283,27 @@ type_defs:
         comments:
           en: |-
             The bounding radius sets the approximate maximum size of the object
-            and is used for _at least_ the following optimizations by the game:
+            and is used for various optimizations and gameplay purposes,
+            including but likely not limited to:
 
             * Culling objects for rendering which are not partially on screen or [visible through portals](~scripting#external-globals-debug-no-frustum-clip).
             * Setting the shadow map size for [dynamic object shadows](~object#shadows-and-lighting).
             * Selecting an appropriate [LOD](~gbxmodel#level-of-detail).
             * Skipping [collision](~model_collision_geometry) checks.
             * Determining if spawn points are blocked by an object.
+            * The interaction radius of [device_control](~).
+            * The default activation radius of automatic door [device_machine](~) if unset.
+            * Default [pathfinding spheres](~model_collision_geometry#pathfinding-spheres) are half the object's bounding radius.
 
             The radius should contain this object completely, but not be too large
-            or else the object will draw unccessarily when off-screen and block
-            spawn points. Setting it too low will cause the object to have clipped
+            or else the object will draw unccessarily when off-screen, block
+            spawn points, or prevent AI from pathfinding effectively.
+            Setting it too low will cause the object to have clipped
             shadows, pop in and out of visibility at the edges of the screen, and
             have inconsistent collision with other objects.
 
-            Additionally, the bounding radius controls several gameplay functions:
-            
-            * The interaction radius of [device_control](~).
-            * The default activation radius of automatic door [device_machine](~) if unset.
-
             The bounding radius can be visualized in Sapien or Standalone using
-            [debug_objects_bounding_spheres](~developer-console#debugfunctions-debug-objects-bounding-spheres).
+            [debug_objects_bounding_spheres](~scripting#external-globals-debug-objects-bounding-spheres).
       - name: bounding_offset
         type: Point3D
       - name: origin_offset
