--- a/src/data/structs/h1/tags/scenario.yml
+++ b/src/data/structs/h1/tags/scenario.yml
@@ -2312,7 +2312,7 @@ type_defs:
           en: >
             Contains the names of all named objects in the scenario. These names
             are referenced by index for each type of placed object if that object is
-            named. The console command [`debug_objects_names`](~developer-console#debugfunctions-debug-objects-names)
+            named. The console command [`debug_objects_names`](~scripting#external-globals-debug-objects-names)
             can display these. The maximum number of names was increased to 640 (from Halo 2)
             in H1A.
       - name: scenery
